--- a/roles/addldap/templates/auth_conf.xml.j2
+++ b/roles/addldap/templates/auth_conf.xml.j2
@@ -100,7 +100,7 @@
 -->
 
     <authenticator>
-        <type>ldap_ad</type>
+        <type>ldap</type>
         <options>
             <allow-password-change>{{ldap.allow_password_change|default('False')}}</allow-password-change>
             <allow-register>{{ldap.allow_register | default('True')}}</allow-register>
@@ -124,7 +124,7 @@
             <bind-password>{password}</bind-password>
             <auto-register-username>{sAMAccountName}</auto-register-username>
             <auto-register-email>{mail}</auto-register-email>
-o
+
         </options>
     </authenticator>
 </auth>
