--- a/roles/addldap/templates/auth_conf.xml.j2
+++ b/roles/addldap/templates/auth_conf.xml.j2
@@ -1,26 +1,34 @@
+#jinja2: trim_blocks:False
 <?xml version="1.0"?>
 <auth>
     <authenticator>
         <type>ldap</type>
+        <filter>'{email}'.endswith('{{ ldap.email_suffix }}')</filter>
         <options>
-            <allow-password-change>{{ldap.allow_password_change|default('False')}}</allow-password-change>
             <allow-register>{{ldap.allow_register | default('True')}}</allow-register>
             <auto-register>{{ldap.auto_register|default('False')}}</auto-register> 
-            <continue-on-failure>{{ldap.continue_on_failure | default('False')}}</continue-on-failure>
+            <allow-password-change>{{ldap.allow_password_change|default('False')}}</allow-password-change>
 
             <server>{{ldap.server}}</server>
             {% if ldap.options is defined %}   
             <ldap-options>{{ldap.options}}</ldap-options>
             {% endif %}
+            <login-use-username>{{ldap.login_use_username| default('False')}}</login-use-username>
+            <continue-on-failure>{{ldap.continue_on_failure | default('False')}}</continue-on-failure>
 
             <search-fields>sAMAccountName,mail</search-fields>
             <search-base>{{ldap.search_base}}</search-base>
-            <login-use-username>{{ldap.login_use_username| default('False')}}</login-use-username>
+
             {% if ldap.login_use_username %}
             <search-filter>(&amp;(objectClass=user)(mail={email}))</search-filter>
             {% else %}
             <search-filter>(&amp;(objectClass=user)(mail={email}))</search-filter>
             {% endif %}
+
+
+            <search-user>{{ldap.search_user}}</search-user>
+            <search-password>{{ldap.search_password}}</search-password>
+ 
             <bind-user>{sAMAccountName}@{{ldap.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</bind-user>
             <bind-password>{password}</bind-password>
             <auto-register-username>{sAMAccountName}</auto-register-username>
