Setup firewall to enable public web port

--- a/roles/galaxyfirewall/templates/ufwgalaxyprofile.j2
+++ b/roles/galaxyfirewall/templates/ufwgalaxyprofile.j2
@@ -11,4 +11,4 @@
 [{{ufw_profile}}]
 title={{ufw_profile}}
 description= This policy enables all ports that are opened in the galaxy application
-ports={{galaxy_web_port}},{{galaxy_ftp_port}},{{galaxy_sftp_port}}/tcp
+ports={{public_galaxy_web_port}}/tcp
