--- a/roles/addldap/templates/auth_conf.xml.j2
+++ b/roles/addldap/templates/auth_conf.xml.j2
@@ -26,7 +26,7 @@
             {% endif %}
 
 
-            <search-user>{{ldap.search_user}}</search-user>
+            <search-user>{{ldap.search_user}}@{{ldap.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</search-user>
             <search-password>{{ldap.search_password}}</search-password>
  
             <bind-user>{sAMAccountName}@{{ldap.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</bind-user>
