--- a/templates/install_python_ldap.sh.j2
+++ b/templates/install_python_ldap.sh.j2
@@ -1,4 +1,4 @@
----
+#!/bin/bash
 # Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
 # Contact us at: sasc@lumc.nl
 #
@@ -8,14 +8,9 @@
 # For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+#
 
-# handlers file for galaxy_docker
-
-- name: check if galaxy has started
-  uri:
-    url: "http://localhost:{{galaxy_web_port}}"
-    return_content: yes
-  register: result
-  until: 'galaxy_brand in result.content'  
-  retries: 20 
-  delay: 10
+# The following code was kindly provided by bgruening at https://github.com/bgruening/docker-galaxy-stable/issues/317 
+. $GALAXY_VIRTUAL_ENV/bin/activate
+pip install python-ldap -i https://wheels.galaxyproject.org
+supervisorctl restart {{supervisorctl_galaxy | default('galaxy')}}:*
