--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -4,14 +4,13 @@
       <plugin id="sge" type="runner" load="galaxy.jobs.runners.drmaa:DRMAAJobRunner">
         <param id="drmaa_library_path">/usr/lib/gridengine-drmaa/lib/libdrmaa.so.1.0</param>
       </plugin>
+    </plugins>
     <handlers default_from_environ="GALAXY_HANDLERS_DEFAULT" default="handlers">
         <handler id="handler0" tags="handlers"/>
         <handler id="handler1" tags="handlers"/>
     </handlers>
     <destinations default="cluster">
         <destination id="cluster" runner="sge"/>
-          <param id="embed_metadata_in_job">True</param>
-        </destination>
     </destinations>
     <limits>
         <limit type="registered_user_concurrent_jobs">{{galaxy_cluster_registered_user_concurrent_jobs | default("2")}}</limit>
