--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -1,19 +1,39 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <job_conf>
-    <plugins workers="{{galaxy_job_workers | default("2")}}">
-      <plugin id="sge" type="runner" load="galaxy.jobs.runners.drmaa:DRMAAJobRunner">
-        <param id="drmaa_library_path">/usr/lib/gridengine-drmaa/lib/libdrmaa.so.1.0</param>
-      </plugin>
-    </plugins>
-    <handlers default_from_environ="GALAXY_HANDLERS_DEFAULT" default="handlers">
-        <handler id="handler0" tags="handlers"/>
-        <handler id="handler1" tags="handlers"/>
-    </handlers>
-    <destinations default="cluster">
-        <destination id="cluster" runner="sge"/>
-    </destinations>
-    <limits>
-        <limit type="registered_user_concurrent_jobs">{{galaxy_cluster_registered_user_concurrent_jobs | default("2")}}</limit>
-        <limit type="anonymous_user_concurrent_jobs">{{galaxy_cluster_anonymous_user_concurrent_jobs | default ("1")}}</limit>
-    </limits>
+  <plugins workers="{{galaxy_job_workers | default("2")}}">
+    <plugin id="local" type="runner" load="galaxy.jobs.runners.local:LocalJobRunner"/>
+    <plugin id="sge" type="runner" load="galaxy.jobs.runners.drmaa:DRMAAJobRunner">
+      <param id="drmaa_library_path">/usr/lib/gridengine-drmaa/lib/libdrmaa.so.1.0</param>
+    </plugin>
+  </plugins>
+  <handlers default_from_environ="GALAXY_HANDLERS_DEFAULT" default="handlers">
+    <handler id="handler0" tags="handlers"/>
+    <handler id="handler1" tags="handlers"/>
+  </handlers>
+  <destinations default="cluster">
+    <destination id="cluster" runner="sge">
+      <env file="/galaxy_venv/bin/activate"/>
+      <param id="embed_metadata_in_job">False</param>
+    </destination>
+    <destination id="local_no_container" runner="local">
+      <env file="/galaxy_venv/bin/activate"/>
+    </destination>
+    <destination id="slurm_cluster" runner="slurm">
+      <param id="nativeSpecification" from_environ="NATIVE_SPEC">--ntasks=1 --share</param>
+      <env file="/galaxy_venv/bin/activate"/>
+      <param id="docker_enabled" from_environ="GALAXY_DOCKER_ENABLED">False</param>
+      <param id="docker_sudo" from_environ="GALAXY_DOCKER_SUDO">False</param>
+      <!-- The empty volumes from shouldn't affect Galaxy, set GALAXY_DOCKER_VOLUMES_FROM to use. -->
+      <param id="docker_volumes_from" from_environ="GALAXY_DOCKER_VOLUMES_FROM"></param>
+      <!-- For a stock Galaxy instance and traditional job runner $defaults will expand out as: $galaxy_root:ro,$tool_directory:ro,$working_directory:rw,$default_file_path:rw -->
+      <param id="docker_volumes" from_environ="GALAXY_DOCKER_VOLUMES">$defaults</param>
+    </destination>
+  </destinations>
+  <tools>
+    <tool id="upload1" destination="local_no_container"/>
+  </tools>
+  <limits>
+    <limit type="registered_user_concurrent_jobs">{{galaxy_cluster_registered_user_concurrent_jobs | default("2")}}</limit>
+    <limit type="anonymous_user_concurrent_jobs">{{galaxy_cluster_anonymous_user_concurrent_jobs | default ("1")}}</limit>
+  </limits>
 </job_conf>
