--- a/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
+++ b/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
@@ -40,5 +40,6 @@ docker_mounted_volumes:
   {% endif %}
   {% if galaxy_cluster_virtualenv is defined%}
   - "{{galaxy_cluster_virtualenv}}:/galaxy_venv"
+  - "{{galaxy_cluster_virtualenv}}:{{galaxy_cluster_virtualenv}}"
   {% endif %}
 ...
