--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -4,6 +4,9 @@
     <plugin id="local" type="runner" load="galaxy.jobs.runners.local:LocalJobRunner"/>
     <plugin id="sge" type="runner" load="galaxy.jobs.runners.drmaa:DRMAAJobRunner">
       <param id="drmaa_library_path">/usr/lib/gridengine-drmaa/lib/libdrmaa.so.1.0</param>
+    <plugin id="slurm" type="runner" load="galaxy.jobs.runners.slurm:SlurmJobRunner">
+        <param id="drmaa_library_path">/usr/lib/slurm-drmaa/lib/libdrmaa.so</param>
+    </plugin>
     </plugin>
   </plugins>
   <handlers default_from_environ="GALAXY_HANDLERS_DEFAULT" default="handlers">
@@ -13,7 +16,7 @@
   <destinations default="cluster">
     <destination id="cluster" runner="sge">
       <env file="{{galaxy_cluster_virtualenv | default('/galaxy_venv')}}/bin/activate"/>
-      <param id="embed_metadata_in_job">False</param>
+      <param id="embed_metadata_in_job">True</param>
     </destination>
     <destination id="local_no_container" runner="local">
       <env file="/galaxy_venv/bin/activate"/>
@@ -30,7 +33,7 @@
     </destination>
   </destinations>
   <tools>
-    <tool id="upload1" destination="local_no_container"/>
+    <tool id="upload1" destination="slurm"/>
   </tools>
   <limits>
     <limit type="registered_user_concurrent_jobs">{{galaxy_cluster_registered_user_concurrent_jobs | default("2")}}</limit>
