--- a/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
+++ b/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
@@ -38,10 +38,10 @@ docker_mounted_volumes:
   - "{{extra_volume}}"
   {% endfor %}
   {% endif %}
-  {% if galaxy_cluster_virtualenv is defined%}
-  - "{{galaxy_cluster_virtualenv}}:/galaxy_venv"
-  - "{{galaxy_cluster_virtualenv}}:{{galaxy_cluster_virtualenv}}"
-  {% endif %}
+#  {% if galaxy_cluster_virtualenv is defined%}
+#  - "{{galaxy_cluster_virtualenv}}:/galaxy_venv"
+#  - "{{galaxy_cluster_virtualenv}}:{{galaxy_cluster_virtualenv}}"
+#  {% endif %}
   {% if optional_environment_settings.SGE_ROOT is defined%}
   - "{{optional_environment_settings.SGE_ROOT}}:{{optional_environment_settings.SGE_ROOT}}"
   {% endif %}
