removed unnecessary quotes

--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -12,9 +12,9 @@
  </handlers>
  <destinations default="cluster">
    <destination id="cluster" runner="sge">
-     <env file="{{galaxy_cluster_virtualenv | default('/galaxy_venv')}}/bin/activate"/>
-     <env id="GALAXY_ROOT_DIR">"{{docker_export_location}}/galaxy-central"</env>
-     <env id="PYTHONPATH">"$PYTHONPATH:{{docker_export_location}}/galaxy-central/lib"
+     <env id="GALAXY_VIRTUAL_ENV">{{galaxy_cluster_virtualenv | default('/galaxy_venv')}}</env>
+     <env id="GALAXY_ROOT_DIR">{{docker_export_location}}/galaxy-central</env>
+     <env id="GALAXY_LIB">{{docker_export_location}}/galaxy-central/lib</env>
      <param id="embed_metadata_in_job">True</param>
    </destination>
    <destination id="local_no_container" runner="local">
