remove redundant volume coupling to the container

--- a/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
+++ b/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
@@ -30,8 +30,8 @@ docker_published_ports:
   {% endif %}
 docker_mounted_volumes:
   - "{{docker_export_location}}:/export/"
-  {% if optional_environment_settings.GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY is defined%}
-  - "{{optional_environment_settings.GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY}}:{{optional_environment_settings.GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY}}"
+  {% if docker_cluster_location is defined%}
+  - "{{docker_cluster_location}}:{{docker_cluster_location}}"
   {% endif %}
   {% if docker_extra_volumes is defined and docker_extra_volumes !='' %}
   {% for extra_volume in docker_extra_volumes %}
@@ -42,7 +42,7 @@ docker_mounted_volumes:
 #  - "{{galaxy_cluster_virtualenv}}:/galaxy_venv"
 #  - "{{galaxy_cluster_virtualenv}}:{{galaxy_cluster_virtualenv}}"
 #  {% endif %}
-  {% if optional_environment_settings.SGE_ROOT is defined%}
-  - "{{optional_environment_settings.SGE_ROOT}}:{{optional_environment_settings.SGE_ROOT}}"
-  {% endif %}
+#  {% if optional_environment_settings.SGE_ROOT is defined%}
+#  - "{{optional_environment_settings.SGE_ROOT}}:{{optional_environment_settings.SGE_ROOT}}"
+#  {% endif %}
 ...
