--- a/roles/galaxy-docker/templates/docker_environment_provision.j2
+++ b/roles/galaxy-docker/templates/docker_environment_provision.j2
@@ -19,7 +19,7 @@
 #
 GALAXY_CONFIG_ADMIN_USERS={{galaxy_docker_provision_user}}
 GALAXY_CONFIG_MASTER_API_KEY={{galaxy_docker_provision_key}}
-GALAXY_CONFIG_BRAND="Provision galaxy"
+GALAXY_CONFIG_BRAND={{galaxy_brand}}
 #
 #####
 ###Optional Section.
