--- a/roles/galaxy-docker/templates/Dockerfile.j2
+++ b/roles/galaxy-docker/templates/Dockerfile.j2
@@ -1,4 +1,3 @@
----
 # Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
 # Contact us at: sasc@lumc.nl
 #
@@ -9,24 +8,16 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-- name: Copy files to docker build directory
-  copy:
-    src: "{{docker_custom_image_dir}}"
-    dest: "{{docker_build_dir}}"
-    mode: 0600
+{% if galaxy_docker_change_uids %}
+from {{docker_image_changed_uids}}:{{bgruening_galaxy_stable_version}}
+{% else %}
+from bgruening/galaxy-stable:{{bgruening_galaxy_stable_version}}
+{% endif %}
 
-- name: Template the Dockerfile
-  template: 
+Maintainer ansible-generated
 
-- name: Build custom docker image
-  docker_image:
-    name: "{{docker_image}}"
-    path: "{{docker_build_dir}}"
-    pull: True
-    force: yes
-    state: present
+{% for line in docker_custom_image_lines %}
+line
+{% endfor %}
 
-- name: remove docker build directory
-  file:
-    path: "{{docker_build_dir}}"
-    state: absent
+CMD ["/usr/bin/startup"]
