--- a/roles/galaxy-docker/templates/Dockerfile.j2
+++ b/roles/galaxy-docker/templates/Dockerfile.j2
@@ -8,7 +8,7 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-{% if galaxy_docker_change_uids %}
+{% if galaxy_docker_change_uids | bool %}
 from {{docker_image_changed_uids}}
 {% else %}
 from bgruening/galaxy-stable:{{bgruening_galaxy_stable_version}}
