added firewall profile for testupgrade

--- a/roles/galaxy-docker/templates/ufwgalaxyprofile.j2
+++ b/roles/galaxy-docker/templates/ufwgalaxyprofile.j2
@@ -12,3 +12,10 @@
 title={{ufw_profile}}
 description= This policy enables all ports that are opened in the galaxy application
 ports={{public_galaxy_web_port}}/tcp
+
+{% if galaxy_docker_test_upgrade | bool %}
+[{{galaxy_docker_test_ufw_profile}}]
+title={{galaxy_docker_test_ufw_profile}}
+description= This profile sets open a web port for the test galaxy application
+ports={{test_upgrade_settings.public_galaxy_web_port}}
+{% endif %}
