--- a/roles/galaxy-docker/templates/rsyncscript.sh.j2
+++ b/roles/galaxy-docker/templates/rsyncscript.sh.j2
@@ -18,11 +18,11 @@ timestamp(){
 echo "$(timestamp) === START RSYNCING BACKUP DATA ==="
 
 src={{src}}
-host={{host}}
+host={{host_address}}
 user={{user | default("")}}
 dest={{dest}}
-dest_string={{user | default("")}}{{ '@' if user != '' else '' }}{{host}}:{{dest}}
-flags="-v -a --compress-level={{compression_level | default('0')}} {{ '--delete' if delete else ''}} --delete-after" 
+dest_string={{user | default("")}}{{ '@' if user != '' else '' }}{{host_address}}:{{dest}}
+flags="-v -a --compress-level={{compression_level | default('0')}} {{ '--delete' if delete else ''}} --delete-after"
 command="rsync $flags $src $dest_string"
 
 echo "$(timestamp) Source       = $src"
