--- a/roles/galaxy-docker/templates/new_empty_db.j2
+++ b/roles/galaxy-docker/templates/new_empty_db.j2
@@ -1,7 +1,7 @@
 SELECT pg_terminate_backend(pg_stat_activity.pid)
 FROM pg_stat_activity
-WHERE pg_stat_activity.datname = '{{container_database_name}}'
+WHERE pg_stat_activity.datname = '{{galaxy_docker_container_database_name}}'
   AND pid <> pg_backend_pid(); 
-DROP DATABASE {{container_database_name}} ;
-CREATE DATABASE {{container_database_name}} WITH OWNER {{container_database_username}} ;
+DROP DATABASE {{galaxy_docker_container_database_name}} ;
+CREATE DATABASE {{galaxy_docker_container_database_name}} WITH OWNER {{galaxy_docker_container_database_username}} ;
 
