--- a/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
+++ b/roles/galaxy-docker/templates/docker_ports_and_volumes.yml.j2
@@ -18,10 +18,10 @@ docker_published_ports:
   - "127.0.0.1:{{galaxy_web_port}}:80"
   {% endif %}
   {% if galaxy_ftp_port is defined and galaxy_ftp_port !='' %}
-  - "127.0.0.1:{{galaxy_ftp_port}}:8021"
+  - "{% if not galaxy_docker_expose_ftp_port %}127.0.0.1:{% endif %}{{galaxy_ftp_port}}:8021"
   {% endif %}
   {% if galaxy_sftp_port is defined and galaxy_sftp_port !='' %}
-  - "127.0.0.1:{{galaxy_sftp_port}}:8022"
+  - "{% if not galaxy_docker_expose_sftp_port %}127.0.0.1:{% endif %}{{galaxy_sftp_port}}:8022"
   {% endif %}
   {% if docker_extra_ports is defined and docker_extra_ports !='' %}
   {% for extra_port in docker_extra_ports %}
