--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -14,9 +14,9 @@
  <destinations default="cluster">
    <destination id="cluster" runner="sge">
      <env file="{{galaxy_docker_cluster_virtualenv | default('/galaxy_venv')}}/bin/activate"/>
-     <env id="GALAXY_ROOT_DIR">{{docker_export_location}}/galaxy-central</env>
-     <env id="GALAXY_LIB">{{docker_export_location}}/galaxy-central/lib</env>
-     <env id="PYTHONPATH">{{docker_export_location}}/galaxy-central/lib</env>
+     <env id="GALAXY_ROOT_DIR">{{galaxy_docker_export_location}}/galaxy-central</env>
+     <env id="GALAXY_LIB">{{galaxy_docker_export_location}}/galaxy-central/lib</env>
+     <env id="PYTHONPATH">{{galaxy_docker_export_location}}/galaxy-central/lib</env>
      {%if galaxy_docker_cluster_environment_variables is defined %}
      {% for env_var, env_setting in galaxy_docker_cluster_environment_variables.iteritems() %}
      <env id="{{env_var}}">{{env_setting}}</env>
