--- a/roles/galaxy-docker/templates/docker_volumes_provision.yml.j2
+++ b/roles/galaxy-docker/templates/docker_volumes_provision.yml.j2
@@ -14,12 +14,12 @@
 # galaxy-docker-ansible generates these values to run the docker container.
 
 docker_mounted_volumes:
-  - "{{docker_export_location}}:/export/"
+  - "{{galaxy_docker_export_location}}:/export/"
   {% if galaxy_docker_shared_cluster_directory is defined%}
   - "{{galaxy_docker_shared_cluster_directory}}:{{galaxy_docker_shared_cluster_directory}}"
   {% endif %}
-  {% if docker_extra_volumes is defined and docker_extra_volumes !='' %}
-  {% for extra_volume in docker_extra_volumes %}
+  {% if galaxy_docker_extra_volumes is defined and galaxy_docker_extra_volumes !='' %}
+  {% for extra_volume in galaxy_docker_extra_volumes %}
   - "{{extra_volume}}"
   {% endfor %}
   {% endif %}
