--- a/roles/galaxy-docker/templates/ufwtestgalaxyprofile.j2
+++ b/roles/galaxy-docker/templates/ufwtestgalaxyprofile.j2
@@ -1,4 +1,4 @@
 [{{galaxy_docker_test_ufw_profile}}]
 title={{galaxy_docker_test_ufw_profile}}
 description= This profile sets open a web port for the test galaxy application
-ports={{test_upgrade_settings.public_galaxy_web_port}}
+ports={{galaxy_docker_upgrade_test_settings.public_galaxy_web_port}}
