--- a/roles/galaxy-docker/templates/ufwgalaxyprofile.j2
+++ b/roles/galaxy-docker/templates/ufwgalaxyprofile.j2
@@ -11,4 +11,4 @@
 [{{ufw_profile}}]
 title={{ufw_profile}}
 description= This policy enables all ports that are opened in the galaxy application
-ports={{public_galaxy_web_port}}/tcp
+ports={{galaxy_docker_web_port_public}}/tcp
