--- a/roles/galaxy-docker/templates/auth_conf.xml.j2
+++ b/roles/galaxy-docker/templates/auth_conf.xml.j2
@@ -3,33 +3,33 @@
 <auth>
     <authenticator>
         <type>ldap</type>
-        <filter>'{email}'.endswith('{{ ldap.email_suffix | default('')}}')</filter>
+        <filter>'{email}'.endswith('{{ galaxy_docker_ldap_config.email_suffix | default('')}}')</filter>
         <options>
-            <allow-register>{{ldap.allow_register | default('True')}}</allow-register>
-            <auto-register>{{ldap.auto_register|default('False')}}</auto-register> 
-            <allow-password-change>{{ldap.allow_password_change|default('False')}}</allow-password-change>
+            <allow-register>{{galaxy_docker_ldap_config.allow_register | default('True')}}</allow-register>
+            <auto-register>{{galaxy_docker_ldap_config.auto_register|default('False')}}</auto-register> 
+            <allow-password-change>{{galaxy_docker_ldap_config.allow_password_change|default('False')}}</allow-password-change>
 
-            <server>{{ldap.server}}</server>
-            {% if ldap.options is defined %}   
-            <ldap-options>{{ldap.options}}</ldap-options>
+            <server>{{galaxy_docker_ldap_config.server}}</server>
+            {% if galaxy_docker_ldap_config.options is defined %}   
+            <ldap-options>{{galaxy_docker_ldap_config.options}}</ldap-options>
             {% endif %}
-            <login-use-username>{{ldap.login_use_username| default('False')}}</login-use-username>
-            <continue-on-failure>{{ldap.continue_on_failure | default('False')}}</continue-on-failure>
+            <login-use-username>{{galaxy_docker_ldap_config.login_use_username| default('False')}}</login-use-username>
+            <continue-on-failure>{{galaxy_docker_ldap_config.continue_on_failure | default('False')}}</continue-on-failure>
 
             <search-fields>sAMAccountName,mail</search-fields>
-            <search-base>{{ldap.search_base}}</search-base>
+            <search-base>{{galaxy_docker_ldap_config.search_base}}</search-base>
 
-            {% if ldap.login_use_username %}
+            {% if galaxy_docker_ldap_config.login_use_username %}
             <search-filter>(&amp;(objectClass=user)(sAMAccountName={username}))</search-filter>
             {% else %}
             <search-filter>(&amp;(objectClass=user)(mail={email}))</search-filter>
             {% endif %}
 
 
-            <search-user>{{ldap.search_user}}@{{ldap.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</search-user>
-            <search-password>{{ldap.search_password}}</search-password>
+            <search-user>{{galaxy_docker_ldap_config.search_user}}@{{galaxy_docker_ldap_config.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</search-user>
+            <search-password>{{galaxy_docker_ldap_config.search_password}}</search-password>
  
-            <bind-user>{sAMAccountName}@{{ldap.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</bind-user>
+            <bind-user>{sAMAccountName}@{{galaxy_docker_ldap_config.server | regex_replace('(ldap:\/\/)([a-zA-Z0-9.\/]*)(:?[0-9]*)','\\2')}}</bind-user>
             <bind-password>{password}</bind-password>
             <auto-register-username>{sAMAccountName}</auto-register-username>
             <auto-register-email>{mail}</auto-register-email>
