--- a/roles/galaxy-docker/templates/job_conf.xml.j2
+++ b/roles/galaxy-docker/templates/job_conf.xml.j2
@@ -3,8 +3,8 @@
 <job_conf>
  <plugins workers="{{galaxy_job_workers | default("2")}}">
    <plugin id="local" type="runner" load="galaxy.jobs.runners.local:LocalJobRunner"/>
-   {% if galaxy_docker_cluster == 'sge' %}
-   <plugin id="{{galaxy_docker_cluster}}" type="runner" load="galaxy.jobs.runners.drmaa:DRMAAJobRunner">
+   {% if galaxy_docker_cluster_type == 'sge' %}
+   <plugin id="{{galaxy_docker_cluster_type}}" type="runner" load="galaxy.jobs.runners.drmaa:DRMAAJobRunner">
      <param id="drmaa_library_path">/usr/lib/gridengine-drmaa/lib/libdrmaa.so.1.0</param>
    </plugin>
    {% endif %}
@@ -15,7 +15,7 @@
  </handlers>
  <destinations default="{{galaxy_docker_cluster_default_destination}}">
    {% for destination, settings in galaxy_docker_cluster_destinations %}
-   <destination id="{{destination}}" runner="{{galaxy_docker_cluster}}">
+   <destination id="{{destination}}" runner="{{galaxy_docker_cluster_type}}">
      <env file="{{galaxy_docker_cluster_virtualenv | default('/galaxy_venv')}}/bin/activate"/>
      <env id="GALAXY_ROOT_DIR">{{galaxy_docker_export_location}}/galaxy-central</env>
      <env id="GALAXY_LIB">{{galaxy_docker_export_location}}/galaxy-central/lib</env>
@@ -26,8 +26,8 @@
      {% endfor %}
      {% endif %}
      <param id="embed_metadata_in_job">{{galaxy_docker_cluster_embed_metadata_in_job | default ('True')}}</param>
-     {% if galaxy_docker_cluster == 'sge' %}
-     <param id="nativeSpecification">-l h_vmem={{settings.memory}} -pe BWA {{cpu_count}}</param>
+     {% if galaxy_docker_cluster_type == 'sge' %}
+     <param id="nativeSpecification">-l h_vmem={{settings.memory}} -pe {{galaxy_docker_cluster_sge_parallel_environment}} {{settings.cpu_count}} {{settings.extra_options}}</param>
      {% endif %}
    </destination>
    {% endfor %}
